Fix jumping stats on certain devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,3 +2,7 @@
   /* disable double-tap to zoom */
   touch-action: manipulation;
 }
+
+.stat {
+  font-variant-numeric: tabular-nums;
+}
